fix z-index bug

--- a/src/app/styles/pages/_pages_layout.less
+++ b/src/app/styles/pages/_pages_layout.less
@@ -177,6 +177,7 @@
       width: 100%;
       max-width: 1024px;
       position: fixed!important;
+      z-index: @z-index;
       .right-left(200px);
       height: 0;
       .right {
